-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.13
-
None
-
Iebe553e5a4438992b0115c8cafb0ffc7fb82b672
See https://doc-snapshots.qt.io/qt5-5.13/qml-qtwebengine-webengineprofile.html#downloadFinished-signal:
downloadFinished(download, )
For Gerrit Dashboard: QTBUG-74010 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
255079,3 | qdoc: Remove trailing comma | 5.13 | qt/qttools | Status: MERGED | +2 | 0 |