qdoc: Remove trailing comma

QML method and signal signatures were written with an extra comma.
This update removes that extra comma.

Change-Id: Iebe553e5a4438992b0115c8cafb0ffc7fb82b672
Task-number: QTBUG-74010
Reviewed-by: Paul Wicking <paul.wicking@qt.io>